add 富文本功能-引入 头部组件-40% 展示 news 页面-50%

--- a/project.config.json
+++ b/project.config.json
@@ -10,9 +10,12 @@
 		"minified": false,
 		"newFeature": true,
 		"nodeModules": false,
-		"autoAudits": false
+		"autoAudits": false,
+		"checkInvalidKey": true
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.4",
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {}
 }
