--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
 	"miniprogramRoot": "dist/",
 	"projectname": "Astron",
 	"description": "",
-	"appid": "wx6b4cad56d8d00755",
+	"appid": "",
 	"setting": {
 		"urlCheck": false,
 		"es6": false,
